// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`useGetEntities returns a getEntities function 1`] = `[Function]`;

exports[`useGetEntities the returned function calls mockFetch 1`] = `
{
  "orderBy": "name",
  "orderDirection": "ASC",
  "results": [
    {
      "id": 1,
      "name": "TEST ENTITY NAME",
      "selected": false,
    },
  ],
  "total": 0,
}
`;

exports[`useSystemsExport returns a export configuration 1`] = `
{
  "isDisabled": false,
  "onSelect": [Function],
}
`;

exports[`useSystemsExport returns a export with isDisabled true on total 0  1`] = `
{
  "isDisabled": true,
  "onSelect": [Function],
}
`;

exports[`useSystemsExport returns a export with isDisabled true on total 0  2`] = `
{
  "isDisabled": false,
  "onSelect": [Function],
}
`;
